--- a/src/Pages/HomePage/ToyCategorySection/ToyCategorySection.css
+++ b/src/Pages/HomePage/ToyCategorySection/ToyCategorySection.css
@@ -1,13 +1,41 @@
 .react-tabs__tab-list {
-  border-bottom: 2px solid #aaa;
+  border-bottom: 3px solid #2f0743;
+  border-radius: 100%;
+  /* display: flex; */
 }
 
 .react-tabs__tab {
-  border: 2px solid transparent;
+  border: 3px solid transparent;
   border-bottom: none;
+  font-size: 22px;
+  padding: 13px 20px;
 }
 
 .react-tabs__tab--selected {
   border-color: #ea6801;
-  border-radius: 5px 5px 0 0;
+  border-radius: 8px 8px 0 0;
+  background-color: rgb(255, 252, 247);
+  border-bottom: none;
+}
+
+@media only screen and (max-width: 576px) {
+  .react-tabs__tab-list {
+    border-bottom: 1px solid #2f0743;
+    border-radius: 0%;
+    /* display: flex; */
+  }
+
+  .react-tabs__tab {
+    border: 2px solid transparent;
+    border-bottom: none;
+    font-size: 14px;
+    padding: 13px 20px;
+  }
+
+  .react-tabs__tab--selected {
+    border-color: #ea6801;
+    border-radius: 8px 8px 0 0;
+    background-color: rgb(255, 252, 247);
+    border-bottom: none;
+  }
 }
