Sub Category done

--- a/src/Pages/HomePage/ToyCategorySection/ToyCategorySection.css
+++ b/src/Pages/HomePage/ToyCategorySection/ToyCategorySection.css
@@ -8,6 +8,8 @@
   border: 3px solid transparent;
   border-bottom: none;
   font-size: 22px;
+  color: #2F0743;
+  font-weight: 700;
   padding: 13px 20px;
 }
 
