--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 @import url("https://fonts.cdnfonts.com/css/reey");
 @import url("https://fonts.cdnfonts.com/css/frosty");
+@import url("https://db.onlinewebfonts.com/c/5630eecf1efc72f573f36378a26526dd?family=Tooney+Noodle+NF");
 
 @tailwind base;
 @tailwind components;
